PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/ReturnExpressionNecessary.pf
module ReturnExpressionNecessary {

    fun testNothing() : Void {
        Int i = 0
    }

    fun testSomething() : Int {
        Int i = 0

        return i
    }
}