PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/VariableExists.pf
module VariableExists {

    fun testSomething() : Int {
        i Int = 0
         
        return bjhkhgv
    }
}